added profile photo

--- a/public/index.html
+++ b/public/index.html
@@ -72,8 +72,14 @@
     </header>
 
     <section class="bg-primary" id="about">
+      <div class="row">
+        <div class="col-lg-8 mx-auto text-center">
+          <img src="img/profile.jpg" class="rounded-circle" width="250">
+        </div>
+      </div>
       <div class="container">
         <div class="row">
+
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">Makeup</h2>
             <hr class="light my-4">
